2007-11-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_i_community_leading_eigenvector_naive) : added
	(igraph_community_leading_eigenvector_naive) : rewritten to call rssolve

	* src/arpack.c (igraph_arpack_init) : remove storage part
	(igraph_arpack_storage_init, igraph_arpack_storage_destroy) : added
	(igraph_arpack_rssolve) : updated
	* src/centrality.c (igraph_eigenvector_centrality) 
	(igraph_i_kleinberg) : updated
	* examples/simple/igraph_community_leading_eigenvector.c : updated	
	
2007-10-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_leading_eigenvector) : bug 
	corrected

	* src/community.c (igraph_community_leading_eigenvector)
	(igraph_community_leading_eigenvector_naive)
	(igraph_community_leading_eigenvector_step) : stop at negative eigenvalue

2007-10-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_le_community_to_membership) : added

	* src/community.c (igraph_community_to_membership) : different
	arguments, graph is not needed, only the number of vertices
	* examples/simple/igraph_community_fastgreedy.c : updated

	* examples/simple/eigenvector_centrality.c : test case corrected

	* src/games.c (igraph_grg_game) : added 'x' and 'y' arguments
	* examples/simple/igraph_grg_game.c : updated

2007-10-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_eigenvector_centrality) : add support for
	edge weights

2007-10-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/f2c/etime_.c
	* src/bliss.cc
	* src/bliss_timer.cc : updates to make it compile under windows

2007-10-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c
	* src/centrality.c (igraph_i_kleinberg, igraph_hub_score)
	(igraph_authority_score) : moved
	(igraph_i_kleinber2) : added
	
	* src/arpack.c 
	* src/centrality.c
	(igraph_i_eigenvector_centrality)
	(igraph_eigenvector_centrality) : moved 	

	* src/arpack_internal.h : use long int instead of int,
	don't use 'const' for char*
	* src/arpack.c